--- a/starter_project/package.json
+++ b/starter_project/package.json
@@ -3,20 +3,23 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
     "start": "node src/server/index.js",
-    "build-prod": "webpack --config webpack.prod.js",
-    "build-dev": "webpack-dev-server  --config webpack.dev.js"
+    "build-prod": "webpack --mode production --config webpack.prod.js",
+    "build-dev": "webpack serve --mode development --port 8080 --config webpack.dev.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
+    "axios": "^1.7.9",
+    "aylien_textapi": "^0.7.0",
+    "compromise": "^14.14.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.17.1",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "node-fetch": "^3.3.2",
+    "sentiment": "^5.0.2",
     "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
@@ -27,6 +30,7 @@
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "mini-css-extract-plugin": "^2.9.2",
     "node-sass": "^9.0.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
@@ -36,6 +40,7 @@
     "terser-webpack-plugin": "^5.3.11",
     "webpack": "^5.90.3",
     "webpack-dev-server": "^5.0.2",
-    "workbox-webpack-plugin": "^7.0.0"
-  }
+    "workbox-webpack-plugin": "^7.3.0"
+  },
+  "description": ""
 }
